--- a/ZoneInfo.csproj
+++ b/ZoneInfo.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DistrictDropdown.cs" />
     <Compile Include="ZoneInfoActivationButton.cs" />
     <Compile Include="TextureUtil.cs" />
     <Compile Include="ZoneInfo.cs" />
